WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187883
Fix lldb summarizers for HashMaps and HashSets
https://bugs.webkit.org/show_bug.cgi?id=187883
Summary
Fix lldb summarizers for HashMaps and HashSets
Simon Fraser (smfr)
Reported
2018-07-21 17:43:18 PDT
Fix lldb summarizers for HashMaps and HashSets
Attachments
Patch
(10.84 KB, patch)
2018-07-21 17:47 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(10.80 KB, patch)
2018-07-21 18:37 PDT
,
Simon Fraser (smfr)
dbates
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2018-07-21 17:47:46 PDT
Created
attachment 345522
[details]
Patch
Simon Fraser (smfr)
Comment 2
2018-07-21 18:37:39 PDT
Created
attachment 345527
[details]
Patch
Daniel Bates
Comment 3
2018-07-21 19:39:41 PDT
Comment on
attachment 345527
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=345527&action=review
r=me
> Tools/lldb/lldb_webkit_unittest.py:156 > + def serial_test_WTFHashMap_tablesize_and_size(self):
Would it be meaningful to add tests for the empty hash table and empty hash set?
Simon Fraser (smfr)
Comment 4
2018-07-21 20:43:21 PDT
(In reply to Daniel Bates from
comment #3
)
> Comment on
attachment 345527
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=345527&action=review
> > r=me > > > Tools/lldb/lldb_webkit_unittest.py:156 > > + def serial_test_WTFHashMap_tablesize_and_size(self): > > Would it be meaningful to add tests for the empty hash table and empty hash > set?
I don't think so, really.
WebKit Commit Bot
Comment 5
2018-07-21 21:11:32 PDT
Comment on
attachment 345527
[details]
Patch Rejecting
attachment 345527
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 345527, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=345527&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=187883
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 345527 from
bug 187883
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=345527
Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Daniel Bates']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 4 diffs from patch file(s). patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/lldb/lldbWebKitTester/main.cpp patching file Tools/lldb/lldb_webkit.py Hunk #1 FAILED at 39. Hunk #2 succeeded at 97 (offset 12 lines). Hunk #3 succeeded at 573 (offset 151 lines). Hunk #4 succeeded at 617 (offset 151 lines). Hunk #5 succeeded at 689 (offset 151 lines). 1 out of 5 hunks FAILED -- saving rejects to file Tools/lldb/lldb_webkit.py.rej patching file Tools/lldb/lldb_webkit_unittest.py Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Daniel Bates']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 4 diffs from patch file(s). patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/lldb/lldbWebKitTester/main.cpp patching file Tools/lldb/lldb_webkit.py Hunk #1 FAILED at 39. Hunk #2 succeeded at 97 (offset 12 lines). Hunk #3 succeeded at 573 (offset 151 lines). Hunk #4 succeeded at 617 (offset 151 lines). Hunk #5 succeeded at 689 (offset 151 lines). 1 out of 5 hunks FAILED -- saving rejects to file Tools/lldb/lldb_webkit.py.rej patching file Tools/lldb/lldb_webkit_unittest.py Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Daniel Bates']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource From
https://git.webkit.org/git/WebKit
ed2da807d3c..dc73ddb5e0d master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 234086 = ed2da807d3cf4b5706430e3c192e1df33836c93c
r234087
= dc73ddb5e0da679c1452249ea1c0ddf783ad0827 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
https://webkit-queues.webkit.org/results/8613595
Simon Fraser (smfr)
Comment 6
2018-07-21 21:56:57 PDT
https://trac.webkit.org/changeset/234088/webkit
Radar WebKit Bug Importer
Comment 7
2018-07-21 21:57:17 PDT
<
rdar://problem/42473235
>
Simon Fraser (smfr)
Comment 8
2018-07-21 21:57:44 PDT
***
Bug 187783
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug